--- a/templates/navigationDrawer.hbs
+++ b/templates/navigationDrawer.hbs
@@ -1,6 +1,3 @@
-{{! Maintainers - Jerome Lam <jerome.lam@gmail.com> }}
-
-<div class="extension">
-    <div class="extension-inner">
-    </div>
+{{! Maintainers - Jerome Lam <jerome.lam@gmail.com>}}
+<div class="navigationDrawer-inner">
 </div>
